<resources>
    <string name="app_name">IntentOrderSystem</string>
    <string name="order">點餐:</string>
    <string name="choose">選擇</string>
    <string name="checkOrder">確認點餐：</string>
    <string name="drink">飲料</string>
    <string name="sugar">甜度</string>
    <string name="ice">冰塊</string>
    <string name="regularSugar">全糖</string>
    <string name="halfSugar">半糖</string>
    <string name="lessSugar">少糖</string>
    <string name="noSugar">無糖</string>
    <string name="regularIce">正常冰</string>
    <string name="lessIce">少冰</string>
    <string name="lightIce">微冰</string>
    <string name="noIce">去冰</string>
    <string name="send">送出</string>
</resources>
